Fixing jumping error when expanding card details

--- a/scss/custom/app.scss
+++ b/scss/custom/app.scss
@@ -4,7 +4,7 @@ $primaryGreen: #CDDC39;
 $primaryGreenHover: #AFB42B;
 $primaryText: #212121;
 body {
-  font-family: "Century Gothic", 'Lato', sans-serif;
+  font-family: 'Raleway', sans-serif;
   color: $primaryText;
   margin: 0;
 }
@@ -172,10 +172,10 @@ body {
         left:0px;
         transition-delay:0.2s;
       }
-      .fa-calendar-o {
+      .fa-envelope-open {
         top:0px;
         left:0px;
-        color:#fff;
+        //color:#fff;
         transition-delay:0.1s;
       }
       .fa-tachometer {
@@ -217,7 +217,7 @@ body {
             width: 150px;
             height: 150px;
             border-radius: 100%;
-            background-color: $primaryGreen;
+            //background-color: $primaryGreen;
             top: 100%;
             left: 0%;
             transform: translate(-50%, -50%);
@@ -247,6 +247,12 @@ body {
         transform:rotate(45deg);
         border-bottom-right-radius:400px;
       }
+      //&.active-tab {
+      //  background-color: $primaryGreen;
+      //  &:hover {
+      //    background-color: $primaryGreenHover;
+      //  }
+      //}
     }
     &.close {
       width: 300px;
@@ -295,10 +301,10 @@ body {
           top:$iconmargin;
           left:200px;
         }
-        .fa-calendar-o {
+        .fa-envelope-open {
           top:141px;
           left:141px;
-          color:#fff;
+          //color:#fff;
           transition-delay:0.65s;
         }
         .fa-tachometer {
@@ -335,9 +341,6 @@ body {
               left: 0%;
               transform: translate(-50%, -50%);
               transition: background-color 0s, width 1.1s cubic-bezier(0.50, 0, 0.05, 1.75) 0.25s, height 1.1s cubic-bezier(0.50, 0, 0.05, 2) 0.25s;
-              &:hover {
-                background-color: $primaryGreenHover;
-              }
             }
           }
         }
@@ -913,7 +916,7 @@ nav {
     .mc-footer {
       overflow: visible;
       position: absolute;
-      top: calc(100% - 16px);
+      top: calc(100% - 9px);
       left: 16px;
       right: 0;
       height: 82px;
@@ -2080,4 +2083,8 @@ nav {
   width: 100%;
   align-items: center;
   flex-direction: column;
+}
+.fa {
+  position: relative;
+  top: 1px;
 }
